--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "app.js",
   "license": "MIT",
   "dependencies": {
+    "db-migrate": "^0.11.6",
+    "db-migrate-mysql": "^1.1.10",
     "express": "^4.17.1"
   },
   "scripts": {
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\" ",
     "start:backend": "nodemon app.js",
     "start:frontend": "cd frontend && npm start",
-    "install:all": "npm install && cd frontend && npm install"
+    "install:all": "npm install && cd frontend && npm install",
+    "migrate": "npx db-migrate"
   },
   "devDependencies": {
     "concurrently": "^5.0.0",
