--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "db-migrate": "^0.11.6",
     "db-migrate-mysql": "^1.1.10",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mariadb": "^2.1.2"
   },
   "scripts": {
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\" ",
