--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "app.js",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "db-migrate": "^0.11.6",
     "db-migrate-mysql": "^1.1.10",
     "express": "^4.17.1",
-    "mariadb": "^2.1.2"
+    "mariadb": "^2.1.2",
+    "vue-router": "^3.1.3"
   },
   "scripts": {
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\" ",
