--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "db-migrate-mysql": "^1.1.10",
     "express": "^4.17.1",
     "mariadb": "^2.1.2",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuelidate": "^0.7.4"
   },
   "scripts": {
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\" ",
